<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:padding="5dp"
    tools:context=".FaqFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ques1"
                android:textSize="20sp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/ans1"
                android:textSize="20sp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ques2"
                android:textSize="20sp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/ans2"
                android:textSize="20sp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ques3"
                android:textSize="20sp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/ans3"
                android:textSize="20sp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ques4"
                android:textSize="20sp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/ans4"
                android:textSize="20sp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ques5"
                android:textSize="20sp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/ans5"
                android:textSize="20sp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ques6"
                android:textSize="20sp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/ans6"
                android:textSize="20sp"
                android:textColor="@color/white"/>
        </LinearLayout>
    </ScrollView>


</FrameLayout>